Fix overlapping issue

--- a/src/styles/pinned-panels.scss
+++ b/src/styles/pinned-panels.scss
@@ -3,6 +3,7 @@
     flex-direction: column-reverse;
     position: relative;
     min-height: 300vh;
+    margin-top: -100vh;
     // overflow: hidden;
 
     @media(min-width: 768px){
